[package]
name = "dhcache"
version = "0.0.2"
authors = ["Brian Ewell"]
edition = "2021"
description = "A micro Diffie-Hellman parameter generation web-service"
repository = "https://github.com/brianewell/dhcache"
license = "MIT"
#keywords
#categories

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
warp = { version = "0.3.7", default-features = false }
